--- a/gestarg/AppFinanzas/templates/AppFinanzas/mostrar_clientes.html
+++ b/gestarg/AppFinanzas/templates/AppFinanzas/mostrar_clientes.html
@@ -40,6 +40,7 @@
                         <td>{{ cliente.email }}</td>
                         <td>{{ cliente.telefono }}</td>
                         <td>
+                            <a href="{% url 'VerCliente' cliente.id %}" class="btn btn-info">Detalle</a>
                             <a href="{% url 'EditarCliente' cliente.id %}" class="btn btn-warning btn-sm">Editar</a>
                             <a href="{% url 'EliminarCliente' cliente.id %}" class="btn btn-danger btn-sm">Eliminar</a>
                         </td>
