--- a/gestarg/AppFinanzas/templates/AppFinanzas/mostrar_ingresos.html
+++ b/gestarg/AppFinanzas/templates/AppFinanzas/mostrar_ingresos.html
@@ -42,8 +42,28 @@
                         <td>{{ ingreso.cliente.razon_social }}</td>
                         <td>
                             <a href="{% url 'VerIngreso' ingreso.id %}" class="btn btn-info">Detalle</a>
-                            <a href="{% url 'EditarIngreso' ingreso.id %}" class="btn btn-warning">Editar</a>
-                            <a href="{% url 'EliminarIngreso' ingreso.id %}" class="btn btn-danger">Eliminar</a>
+
+                            {% if user.is_staff %}
+                                <a href="{% url 'EditarIngreso' ingreso.id %}" class="btn btn-warning">Editar</a>
+                                <a href="{% url 'EliminarIngreso' ingreso.id %}" class="btn btn-danger">Eliminar</a>
+                            {% else %}
+                                <a href="#" class="btn btn-secondary" 
+                                   data-bs-toggle="tooltip" 
+                                   data-bs-placement="top" 
+                                   title="Debes ser miembro del staff" 
+                                   tabindex="-1" 
+                                   aria-disabled="true">
+                                    Editar
+                                </a>
+                                <a href="#" class="btn btn-secondary" 
+                                   data-bs-toggle="tooltip" 
+                                   data-bs-placement="top" 
+                                   title="Debes ser miembro del staff" 
+                                   tabindex="-1" 
+                                   aria-disabled="true">
+                                    Eliminar
+                                </a>
+                            {% endif %}
                         </td>
                     </tr>
                     {% endfor %}
@@ -55,4 +75,16 @@
 <p style="margin-top: 20px;">No hay ingresos registrados.</p>
 {% endif %}
 
+{% endblock %}
+
+{% block scripts %}
+<script>
+    // Inicializar tooltips
+    document.addEventListener('DOMContentLoaded', function () {
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl)
+        })
+    });
+</script>
 {% endblock %}
