--- a/gestarg/AppFinanzas/templates/AppFinanzas/ver_ingreso.html
+++ b/gestarg/AppFinanzas/templates/AppFinanzas/ver_ingreso.html
@@ -17,9 +17,42 @@
         <p><strong>Cliente:</strong> {{ ingreso.cliente.razon_social }}</p>
         <p><strong>Método de Pago:</strong> {{ ingreso.metodo_pago }}</p>
         <p><strong>Usuario:</strong> {{ ingreso.usuario.username }}</p>
-        <a href="{% url 'EditarIngreso' ingreso.id %}" class="btn btn-warning">Editar</a>
-        <a href="{% url 'EliminarIngreso' ingreso.id %}" class="btn btn-danger">Eliminar</a>
+        
+        {% if user.is_staff %}
+            <a href="{% url 'EditarIngreso' ingreso.id %}" class="btn btn-warning">Editar</a>
+            <a href="{% url 'EliminarIngreso' ingreso.id %}" class="btn btn-danger">Eliminar</a>
+        {% else %}
+            <a href="#" class="btn btn-secondary" 
+               data-bs-toggle="tooltip" 
+               data-bs-placement="top" 
+               title="Debes ser miembro del staff" 
+               tabindex="-1" 
+               aria-disabled="true">
+                Editar
+            </a>
+            <a href="#" class="btn btn-secondary" 
+               data-bs-toggle="tooltip" 
+               data-bs-placement="top" 
+               title="Debes ser miembro del staff" 
+               tabindex="-1" 
+               aria-disabled="true">
+                Eliminar
+            </a>
+        {% endif %}
+
         <a href="{% url 'MostrarIngresos' %}" class="btn btn-primary">Volver</a>
     </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+<script>
+    // Inicializar tooltips
+    document.addEventListener('DOMContentLoaded', function () {
+        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+            return new bootstrap.Tooltip(tooltipTriggerEl)
+        })
+    });
+</script>
 {% endblock %}
