--- a/gestarg/Landing/templates/Landing/about_me.html
+++ b/gestarg/Landing/templates/Landing/about_me.html
@@ -11,9 +11,11 @@
     </header>
     <section class="text-center">
         <p>Soy Felipe Lorenzo, Licenciado en Administración de Empresas con más de 3 años de experiencia en la industria fintech.</p>
-        <p>Mi especialidad se centra en el área de operaciones y en product data analytics, habilidades que pude desarrollar a través de proyectos personales y dentro de Ualá. Me apasiona utilizar insights data-driven para optimizar procesos, mejorar la toma de decisiones y potenciar el growth del negocio.</p>
+        <p>Actualmente trabajo en <a href="https://www.uala.com.ar" target="_blank">Ualá</a>, fintech de origen argentino que ofrece un ecosistema financiero completo.</p>
+        <p>Mi especialidad se centra en el área de operaciones y en product data analytics, habilidades que pude desarrollar a través de proyectos personales y dentro de la empresa. Me apasiona utilizar insights data-driven para optimizar procesos, mejorar la toma de decisiones y potenciar el growth del negocio.</p>
         <p>Me fui capacitando estos últimos años en Data Analytics, Automations, SQL y Python.</p>
-        <p>Soy fanático de las finanzas, la economía y la innovación tecnológica. ¡Conectemos en LinkedIn!</p>
+        <p>El objetivo de esta web es aplicar los conocimientos adquiridos en Python y Django del curso que acabo de finalizar en Coderhouse.</p>
+        <p>Soy fanático de las finanzas, la economía y la innovación tecnológica. ¡Conectemos en <a href="https://www.linkedin.com/in/felipe-lorenzo" target="_blank">LinkedIn</a>!</p>        
     </section>
     <div class="text-center mt-4">
         <a href="https://linkedin.com/in/felipe-lorenzo" target="_blank" class="btn btn-outline-primary">LinkedIn</a>
