--- a/gestarg/Landing/templates/Landing/nosotros.html
+++ b/gestarg/Landing/templates/Landing/nosotros.html
@@ -15,7 +15,7 @@
             </div>
             <div class="col-lg-6 order-lg-1">
                 <div class="p-5">
-                    <h2 class="display-4">¿Quienes somos?</h2>
+                    <h2 class="display-4">¿Quiénes somos?</h2>
                     <p>En Gestarg, somos un equipo apasionado y comprometido con la innovación en la gestión financiera. Fundada con la visión de transformar la forma en que las personas y empresas manejan sus recursos, nuestra empresa se basa en la experiencia y el conocimiento acumulado en el sector financiero y tecnológico. Nos dedicamos a ofrecer soluciones que simplifiquen, optimicen y potencien el manejo de las finanzas, ayudando a nuestros clientes a alcanzar sus objetivos con confianza y eficacia.</p>
                 </div>
             </div>
