--- a/gestarg/Landing/templates/Landing/index.html
+++ b/gestarg/Landing/templates/Landing/index.html
@@ -57,8 +57,8 @@
 <!-- Call to Action Section -->
 <section class="py-5 bg-light">
     <div class="container text-center">
-        <h2 class="fw-light">Empieza a gestionar tus finanzas hoy mismo</h2>
-        <p class="lead">Crea una cuenta y descubre cómo Gestarg puede ayudarte a tomar el control de tus finanzas.</p>
+        <h2 class="fw-light">Empezá a gestionar tus finanzas hoy mismo</h2>
+        <p class="lead">Crea una cuenta y descubrí cómo Gestarg puede ayudarte a tomar el control de tus finanzas.</p>
         <a class="btn btn-primary btn-lg" href="{% url 'Register' %}">Crear Cuenta</a>
     </div>
 </section>
