Agrego grafico a index de AppFinanzas

--- a/gestarg/AppFinanzas/templates/AppFinanzas/base.html
+++ b/gestarg/AppFinanzas/templates/AppFinanzas/base.html
@@ -46,7 +46,7 @@
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'MostrarClientes' %}">Clientes</a>
                     
                     {% comment %}
-                            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'EditarPerfil' %}">Perfil</a>
+                            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'Historial' %}">Historial</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="{% url 'Logout' %}" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">Cerrar sesión</a>
 
                     {% endcomment %}
