Agregando funcionalidad para superusuarios y adaptando logica de negocio con la landing

--- a/gestarg/AppFinanzas/templates/AppFinanzas/403.html
+++ b/gestarg/AppFinanzas/templates/AppFinanzas/403.html
@@ -19,7 +19,7 @@
                 <ul class="list-unstyled">
                     <li><i class="fas fa-arrow-left"></i> <a href="javascript:history.back()" class="text-white">Regresar a la página anterior</a></li>
                     <li><i class="fas fa-home"></i> <a href="{% url 'Inicio' %}" class="text-white">Ir a la página de inicio</a></li>
-                    <li><i class="fas fa-envelope"></i> <a href="mailto:felipe.lorenzo@gestarg.com" class="text-white">Contactar al soporte</a></li>
+                    <li><i class="fas fa-envelope"></i> <a href="mailto:felipelorenzo.data@gmail.com" class="text-white">Contactar al soporte</a></li>
                 </ul>
             </div>
         </div>
