--- a/gestarg/Landing/templates/Landing/nosotros.html
+++ b/gestarg/Landing/templates/Landing/nosotros.html
@@ -34,7 +34,7 @@
             <div class="col-lg-6">
                 <div class="p-5">
                     <h2 class="display-4">¿Qué ofrecemos?</h2>
-                    <p>Ofrecemos una gama completa de soluciones para la gestión financiera adaptadas a las necesidades de nuestros clientes. Desde herramientas avanzadas para el seguimiento de ingresos y gastos, hasta funciones integradas para la planificación y análisis financiero, nuestras soluciones están diseñadas para proporcionar una visión clara y precisa de tu situación económica. Nuestro objetivo es facilitar una gestión financiera efectiva y sin complicaciones, permitiéndote tomar decisiones informadas y estratégicas con facilidad.</p>
+                    <p>Ofrecemos una plataforma completa de soluciones para la gestión financiera adaptadas a las necesidades de nuestros clientes. Desde herramientas para el seguimiento de ingresos y gastos, hasta funciones integradas para la planificación y análisis financiero.</p>
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <div class="col-lg-6 order-lg-1">
                 <div class="p-5">
                     <h2 class="display-4">¡Trabajemos juntos!</h2>
-                    <p>Creemos que la colaboración es clave para el éxito. Estamos siempre en busca de nuevas oportunidades para asociarnos con individuos y empresas que compartan nuestra pasión por la innovación y la excelencia en la gestión financiera. Ya sea que estés interesado en una consulta personalizada, en explorar nuestras soluciones a medida o en desarrollar nuevas funcionalidades, estamos aquí para trabajar contigo y ayudarte a alcanzar tus metas. Contáctanos hoy mismo y descubre cómo podemos crear juntos un futuro financiero más brillante.</p>
+                    <p>Creemos que la colaboración es clave para el éxito. Estamos siempre en busca de nuevas oportunidades para asociarnos con individuos y empresas que compartan nuestra pasión por la innovación y la excelencia en la gestión financiera. ¡Comunicate con nosotros para armar tu servicio a medida! <a href="mailto:felipelorenzo.data@gmail.com">felipelorenzo.data@gmail.com</a></p>
                 </div>
             </div>
         </div>
