--- a/gestarg/Landing/templates/Landing/base.html
+++ b/gestarg/Landing/templates/Landing/base.html
@@ -28,9 +28,15 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'InicioLanding' %}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'Nosotros' %}">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'AboutMe' %}">Acerca de mí</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" aria-current="page" href="{% url 'InicioLanding' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/nosotros/' %}active{% endif %}" href="{% url 'Nosotros' %}">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/about/' %}active{% endif %}" href="{% url 'AboutMe' %}">Acerca de mí</a>
+                    </li>
                     </li>
                 </ul>
             </div>
