--- a/gestarg/Landing/templates/Landing/base.html
+++ b/gestarg/Landing/templates/Landing/base.html
@@ -14,7 +14,7 @@
     <!-- Custom CSS -->
     <style>
         .footer-spacing {
-            height: 100px; /* Ajusta la altura según el espacio que desees */
+            height: 100px;
         }
     </style>
 </head>
