--- a/gestarg/Landing/templates/Landing/about_me.html
+++ b/gestarg/Landing/templates/Landing/about_me.html
@@ -20,7 +20,7 @@
     <div class="text-center mt-4">
         <a href="https://linkedin.com/in/felipe-lorenzo" target="_blank" class="btn btn-outline-primary">LinkedIn</a>
         <a href="https://github.com/Vverty" target="_blank" class="btn btn-outline-secondary">GitHub</a>
-        <a href="https://github.com/Vverty/gestarg" target="_blank" class="btn btn-outline-info">Proyecto GestArg</a>
+        <a href="https://github.com/Vverty/gestarg_final" target="_blank" class="btn btn-outline-info">Proyecto GestArg</a>
     </div>
 </div>
 {% endblock %}
